.archive/clusters/homelab-1/.network-policies/allow-egress-to-postgres/destination/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-postgres
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              networking/allow-egress-to-postgres: "true"
      ports:
        - protocol: TCP
          port: 5432
